--- a/jukebox/src/index.html
+++ b/jukebox/src/index.html
@@ -8,8 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <link href="./assets/indigo-pink.css" rel="stylesheet">
-  <link href="./styles.css" rel="stylesheet">
+  <link href="styles.scss" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
