worked on Angular Material

--- a/Report/res/code/navigation-bar.html
+++ b/Report/res/code/navigation-bar.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary"> |\label{line:navbar_mat_toolbar}|
   <button mat-button id="btn_menu" (click)="sidenav.toggle()" *ngIf="!isElectronApp && mobileQuery.matches">
     <mat-icon>menu</mat-icon>
   </button>
