finished Angular Material description

--- a/Report/res/code/navigation-bar.html
+++ b/Report/res/code/navigation-bar.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary"> |\label{line:navbar_mat_toolbar}|
   <button mat-button id="btn_menu" (click)="sidenav.toggle()" *ngIf="!isElectronApp && mobileQuery.matches">
-    <mat-icon>menu</mat-icon>
+    <mat-icon>menu</mat-icon> |\label{line:navbar_icon}|
   </button>
   <span id="title">Jukebox</span>
 </mat-toolbar>
